--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-moveable": "^0.20.10",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^5.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
@@ -25,6 +26,7 @@
     "npm": "6.13.4"
   },
   "scripts": {
+"start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch --mode=development",
     "postinstall": "webpack"
